fixed things spacing

--- a/dev/styles/partials/_sections.scss
+++ b/dev/styles/partials/_sections.scss
@@ -17,6 +17,7 @@
             justify-content: flex-end;
         }
         &__things {
+            padding: 0;
             &--end {
                 display: flex;
                 flex-direction: row-reverse;
@@ -31,17 +32,19 @@
                 }    
             }
 
+            
+
             .things__image {
                 object-fit: cover;
                 height:100%;
                 &--dark {
                     position: relative;
-                    top: -50px;
+                    top: -40px;
                     box-shadow: 20px 20px $primaryDark, -200px 20px $primaryDark;
                 }
                 &--light {
                     position: relative;
-                    top: 50px;
+                    top: 40px;
                     box-shadow: 20px 20px $primaryLight, 200px 20px $primaryLight;
                 }
 
